[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-analyser"
version = "0.1.0"
description = "Git repository analyser — commit history, churn, contributor patterns, dispatches to analyser family"
authors = [{name = "Michael Borck", email = "michael.borck@curtin.edu.au"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rich>=13.7.0",
]

[project.scripts]
git-analyser = "git_analyser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/git_analyser"]
