[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-analyser"
version = "0.4.0"
description = "Git repository analyser — commit history, churn, contributor patterns, dispatches to analyser family"
authors = [{name = "Michael Borck", email = "michael.borck@curtin.edu.au"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "lens-contract>=0.2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

# Local dev: resolve lens-contract from the sibling checkout. uv strips this from
# the published wheel, which keeps the plain `lens-contract>=0.2.0` PyPI pin.
[tool.uv.sources]
lens-contract = { path = "../lens-contract", editable = true }

[project.scripts]
git-analyser = "git_analyser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/git_analyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that load real models or make network calls — opt-in with `pytest -m slow`",
]
